--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+
+.env
+
+.DS_Store
+
+public/build
