--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "file-loader": "^1.1.5",
+    "json-loader": "^0.5.7",
+    "moment": "^2.19.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
@@ -38,6 +41,7 @@
     "react-router": "^3.0.1",
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.7",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^6.4.3",
     "redux-saga": "^0.14.3"
