--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "dotenv": "^4.0.0",
     "file-loader": "^1.1.5",
     "json-loader": "^0.5.7",
+    "leaflet": "^1.2.0",
+    "material-ui": "^0.19.4",
     "moment": "^2.19.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
+    "react-leaflet": "^1.7.1",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "react-router-bootstrap": "^0.23.1",
